route dla highscore (live data)
